Phase 2: Add semantic validation with import resolution
MAJOR FEATURE: Import Resolution Against Standard Library
=========================================================

The validator now performs semantic validation beyond syntax checking.
It can validate import statements against the SysML v2 standard library,
catching errors that only semantic-aware tools like Cameo would catch.

NEW FEATURES
------------

1. Library Indexing System
   - LibraryConfig: Multiple configuration methods for library path
     * System property: -Dsysml.library.path=...
     * Environment variable: SYSML_LIBRARY_PATH
     * Config file: validator.properties
     * Auto-search common locations

   - LibraryIndex: Scans and indexes sysml.library directory
     * Indexes all .sysml and .kerml files
     * Extracts package declarations and type definitions
     * Performance: 93 packages, 1152 elements in ~500ms
     * In-memory index: Map<PackageName, Set<ElementNames>>

2. Import Resolution
   - ImportResolver: Validates import statements
     * Checks package existence
     * Checks element existence for qualified imports
     * Handles wildcard imports (::*)
     * Clear error messages for unresolved imports

   - SemanticValidator: Integrates import resolution
     * Walks parse tree to find import statements
     * Uses ImportResolver to validate each import
     * Collects errors and warnings
     * Warns when library not configured

3. Enhanced Validator
   - Version bumped to 0.2.0-SNAPSHOT
   - Semantic validation runs after syntax validation
   - Backward compatible: Works without library (warnings only)
   - Fixed immutable list issue with error collection

TESTING
-------

Medical Device Parametric Model (16_medical_device_stability_v2.sysml):
- Contains: import ScalarValues::Real, Boolean, Integer
- Before: 0 errors (false positive - imports not validated)
- After (with library): 0 errors (imports successfully resolved)
- After (without library): Warnings about unresolved 